TB-2008-11-04-0: Bugfix:     - operated add. clusters can no longer delete
                               files for the main TS -> one .testsuite_delete
                               file for each TS cluster
                 Enhancem.:  - a TS generated script returns now
                               _exit_status_:(91) in case of a trapped error
                 Review:     CR
 
MD-2008-11-04-0: Bugfix:     - checkin MD-2008-10-28-0 introduced a copy/paste 
                               tcl error.
 
RD-2008-11-03-0: Enhancem.:  - added new test per_job_consumables
                             - enhanced resource_reservation to cover per job
                               consumables
                 Review:     CR

RH-2008-11-03-0: Enhancem.:  o Hedeby: test for issue 585 and 586 added
                             o logging: New util method ts_log_heading added.
                               This method can be used to log logical execution
                               steps of a test.
                 Review:     TB

EB-2008-11-02-0: Enhancem.:  Additional test for jsc scripts
                 Review:     MD

DG-2008-10-29-1: Bugfix:     Fixed commlib shutdown test.
                 Review:     CR

TB-2008-10-29-0: Bugfix:     Fixed Hedeby test 'usecase SI'
                 Cleanup:    o Hedeby test 'usecase SI':
                               - introduced "this" context
                               - additional logging output
                             o Hedeby util.tcl
                               - changed remove_resource_property() to optional
                                 named argument passing and adjusted usages
                 Review:     MG

DG-2008-10-29-0: Bugfix:     An expect timeout does not define $expect_out(0,string)
                             because nothing has matched. 
                 Review:     CR

GH-2008-10-29-0: Bugfix:     o Removed obsolete code from test; no need to